<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.douglimar.gasoretanol.ConsumoMedioActivity"
    tools:showIn="@layout/activity_consumo_medio">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="br.com.douglimar.teste_homepagedesign.ConsumoMedioActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="25sp"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/consumo_m_dio_de_combust_vel"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">


            <TextView
                android:id="@+id/tvConsumoMedioTip"
                android:layout_marginLeft="20dp"
                android:background="@color/lightGray"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/consumo_medio_tip"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/km_percorridos" />

            <EditText
                android:id="@+id/edtKmPercorrido"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@color/lightGray"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView3"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/litros" />

            <EditText
                android:id="@+id/edtLitrosGastos"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="25sp"
                android:background="@color/lightGray"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnConsumoMedio"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_activity_consumo_medio"
                android:textColor="@color/colorWhite"
                android:text="@string/calcular_consumo_medio" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewonsumoMedio"
            ads:adSize="BANNER"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgConsumoMedio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/tvConsumoMedio"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
