<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.douglimar.gasoretanol.AbastecimentoActivity"
    tools:showIn="@layout/activity_abastecimento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray"
                    android:gravity="center"
                    android:text="@string/abastecimento_tip" />
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gridLayout2"
                    android:columnCount="2"
                    android:paddingTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:rowCount="4">


                    <TextView
                        android:id="@+id/tvMoneyLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_gravity="end|bottom"
                        android:textSize="16sp"
                        android:text="@string/valor_que_ser_abastecido_r"
                        android:layout_row="0"/>

                    <EditText
                        android:id="@+id/edtDisplayMoney"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_column="1"
                        android:paddingStart="3dp"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:layout_marginStart="3dp"
                        android:textSize="20sp"
                        android:layout_row="0"
                        tools:ignore="LabelFor,RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvDisplayMoney"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_column="1"
                        android:paddingStart="3dp"
                        android:layout_row="0"
                        android:layout_marginStart="3dp"
                        android:gravity="bottom"
                        android:textSize="20sp"
                        android:height="40dp"
                        android:background="@color/lightGray"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                    <TextView
                        android:id="@+id/tvFuelPriceLabel"
                        android:layout_gravity="end|bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="16sp"
                        android:text="@string/valor_do_combust_vel"
                        android:layout_row="2"/>

                    <EditText
                        android:id="@+id/edtDisplayFuelPrice"
                        android:layout_width="match_parent"
                        android:layout_column="1"
                        android:layout_gravity="bottom"
                        android:textSize="20sp"
                        android:layout_marginStart="3dp"
                        android:paddingStart="3dp"
                        android:layout_row="2"
                        android:layout_marginTop="5dp"
                        android:inputType="number"
                        tools:ignore="LabelFor,RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvDisplayFuelPrice"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:paddingStart="3dp"
                        android:layout_marginStart="3dp"
                        android:layout_column="1"
                        android:gravity="bottom"
                        android:layout_height="40dp"
                        android:background="@color/lightGray"
                        android:layout_marginTop="5dp"
                        android:layout_row="2"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                </GridLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal" android:weightSum="2">

                    <Button
                        android:id="@+id/btnCalcular"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/bg_activity_km_por_litro"
                        android:text="@string/calcular" />

                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewAbastecimento"
            ads:adSize="BANNER"
            android:layout_margin="6dp"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">
                <ImageView
                    android:id="@+id/imgResultAbastecimento"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/tvResultAbastecimento"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_height="match_parent"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
