<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.douglimar.gasoretanol.GasOrEtanolActivity"
    tools:showIn="@layout/activity_gas_or_etanol">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/lightGray"
        tools:context="br.com.douglimar.teste_homepagedesign.Main2Activity">
<!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gasolina ou Etanol"
            android:textSize="25dp"
            android:textStyle="bold"
            android:gravity="center"/>
-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:orientation="vertical">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gridLayout"
                    android:columnCount="2"
                    android:paddingTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:rowCount="4">


                    <TextView
                        android:id="@+id/tvEtanol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_gravity="end|bottom"
                        android:textSize="16sp"
                        android:text="@string/valor_do_etanol"
                        android:layout_row="0"/>

                    <EditText
                        android:id="@+id/edtDisplayEtanolValue"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_column="1"
                        android:paddingStart="3dp"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:layout_marginStart="3dp"
                        android:textSize="20sp"
                        android:layout_row="0"
                        tools:ignore="LabelFor,RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvDisplayEtanolValue"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_column="1"
                        android:paddingStart="3dp"
                        android:layout_row="0"
                        android:layout_marginStart="3dp"
                        android:gravity="bottom"
                        android:textSize="20sp"
                        android:height="40dp"
                        android:background="@color/lightGray"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                    <TextView
                        android:id="@+id/tvGasolina"

                        android:layout_gravity="end|bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textSize="16sp"
                        android:text="@string/valor_da_gasolina"
                        android:layout_row="2"/>

                    <EditText
                        android:id="@+id/edtDisplayGasValue"
                        android:layout_width="match_parent"
                        android:layout_column="1"
                        android:layout_gravity="bottom"
                        android:textSize="20sp"
                        android:layout_marginStart="3dp"
                        android:paddingStart="3dp"
                        android:layout_row="2"
                        android:layout_marginTop="5dp"
                        android:inputType="number"
                        tools:ignore="LabelFor,RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvDisplayGasValue"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:paddingStart="3dp"
                        android:layout_marginStart="3dp"
                        android:layout_column="1"
                        android:gravity="bottom"
                        android:layout_height="40dp"
                        android:background="@color/lightGray"
                        android:layout_marginTop="5dp"
                        android:layout_row="2"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                </GridLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray"
                    android:gravity="center"
                    android:text="@string/gas_or_etanol_tip" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal" android:weightSum="2">

                    <Button
                        android:id="@+id/btnCalcular"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/bg_activity_gas_or_etanol"
                        android:text="@string/calcular" />

                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewGasOrEtanol"
            ads:adSize="BANNER"
            android:layout_margin="6dp"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewResult"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">
                <ImageView
                    android:id="@+id/imgResult"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_height="match_parent"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
